# view/src/api/codegen/services/PermissionHandlerService.ts
@@ -4,6 +4,8 @@
 /* eslint-disable */
 import type { server_api_GetPermissionListRequest } from '../models/server_api_GetPermissionListRequest';
 import type { server_api_GetPermissionListResponse } from '../models/server_api_GetPermissionListResponse';
+import type { server_api_GetUserPermissionPathRequest } from '../models/server_api_GetUserPermissionPathRequest';
+import type { server_api_GetUserPermissionPathResponse } from '../models/server_api_GetUserPermissionPathResponse';
 import type { CancelablePromise } from '../core/CancelablePromise';
 import { OpenAPI } from '../core/OpenAPI';
 import { request as __request } from '../core/request';
@@ -19,6 +21,21 @@ export class PermissionHandlerService {
         return __request(OpenAPI, {
             method: 'POST',
             url: '/permission/list',
+            body: requestBody,
+            mediaType: 'application/json',
+        });
+    }
+    /**
+     * @param requestBody
+     * @returns server_api_GetUserPermissionPathResponse OK
+     * @throws ApiError
+     */
+    public static permissionHandlerGetUserPermissionPath(
+        requestBody: server_api_GetUserPermissionPathRequest,
+    ): CancelablePromise<server_api_GetUserPermissionPathResponse> {
+        return __request(OpenAPI, {
+            method: 'POST',
+            url: '/permission/user_permission',
             body: requestBody,
             mediaType: 'application/json',
         });
